fixing section-about display on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -102,7 +102,7 @@ body {
 
 @media (max-width: 37.5em) {
     .heading-secondary {
-        font-size: 2.2rem;
+        font-size: 2.0rem;
         padding-top: 50px;
     }
 }
@@ -174,13 +174,20 @@ body {
 .section-about {
     background-color: #f7f7f7;
     padding: 20rem 0;
-    margin-top: -25vh;
+    margin-top: -19vh;
     margin-bottom: 10vh;
 }
 
 @media (max-width: 56.25em) {
     .section-about {
         padding: 20rem 4rem;
+    }
+}
+
+@media (max-width: 326px) {
+    .section-about {
+        padding: 20rem 4rem;
+        margin-top: -40vh;
     }
 }
 
